# storage/api-docs/api-docs.json
@@ -13,6 +13,38 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/general/categories": {
+            "get": {
+                "tags": [
+                    "general"
+                ],
+                "summary": "Show all  categories",
+                "description": "Show all  categories",
+                "operationId": "allCategories",
+                "responses": {
+                    "200": {
+                        "description": "Successful signin",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/general/currencies": {
             "get": {
                 "tags": [
